blå farge på hyperlinks

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <p>&nbsp;</p>
 
 <div class="fit">
+    <p>&nbsp;&nbsp;</p>
     
-    <h1>WellCare Monitors</h1>
+    <h1>WellCare Monitors, "Your Health is in Safe Hands"</h1>
 
     <img src="image/wellcare-monitors.jpg"/>
 
@@ -37,7 +38,6 @@
 
 </body>
     <footer>
-        <h2>Your Health is in Safe Hands</h2>
         </footer>
 
 
