--- a/products.html
+++ b/products.html
@@ -31,9 +31,9 @@
     <h1>Products:</h1>
     <h2>Images and description</h2>
     <ul>img</ul>
-    <li>...</li>
-    <li>...</li>
-    <li>...</li>
+    <li>Information</li>
+    <li>Information</li>
+    <li>Information</li>
     <ul>img</ul>
     <ul>img</ul>
     <ul>img</ul>
