la til contact-us, men med problemer

--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
     
     <h1>Products:</h1>
     <h2>Images and description</h2>
-    <ul>img</ul>
+    <ul> <img src="image/armbånd-wellcare.jpg"/></ul>
     <li>Information</li>
     <li>Information</li>
     <li>Information</li>
