--- a/products.html
+++ b/products.html
@@ -31,13 +31,10 @@
     <h1>Products:</h1>
     <h2>Images and description</h2>
     <ul> <img src="image/armbånd-wellcare.jpg"/></ul>
-    <li>Information</li>
-    <li>Information</li>
-    <li>Information</li>
-    <ul>img</ul>
-    <ul>img</ul>
-    <ul>img</ul>
-
+    <li>Inkludert med skjerm</li>
+    <ul></ul><img src="image/armbånd-wellcare2.jpg"/></ul>
+    <li>Ikke inkludert skjerm, den røde sirkelen er inne i produktet, og brukes får målingene av helsa til pasienten.</li>
+    
    </p>
 
 </body>
