--- a/contact-us.html
+++ b/contact-us.html
@@ -95,7 +95,7 @@
         <div class=" col-lg-5">
              <h2>Meldingen du sendte: </h2>
             <div id="orderList"></div>
-            <button class="btn btn-danger" onclick="slettalle()">Angre en melding</button>
+            <button class="btn btn-danger" onclick="slettalle()">Angre meldingene dine</button>
         </div>
     </div>
 </div>
