--- a/contact-us.html
+++ b/contact-us.html
@@ -102,7 +102,7 @@
 
 
 
-<script src="javascript/contact-us.js"></script>
+<!--              <script src="javascript/contact-us.js"></script>            -->
 </body>
 </html>
 
