--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ Med et slikt produkt , vil spesialisthelsetjenesten ha mer kapasitet til å hjel
 <p>Håvard: Short Resume</p>
 <p>Oda: Short Resume</p>
 <p>Bahar: Short Resume</p>
-<p>Fatou: Leader, 999 99 999, fatou@gmmail.com</p>
+<p>Fatou: Leader, 999 99 999, fatou@gmail.com</p>
 
 </body>
     
