--- a/about.html
+++ b/about.html
@@ -7,11 +7,10 @@
 
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <header>
 <nav>
-    <p>WellCare Monitors</p> 
-    <p>&nbsp;</p>
     <a class="nav" href="index.html">Home</a>
     <a class="nav" href="about.html">About</a>
     <a class="nav" href="products.html">Products</a>
@@ -61,14 +60,15 @@ Med et slikt produkt , vil spesialisthelsetjenesten ha mer kapasitet til å hjel
 
 </div>
 
-<h2>Emplyees:</h2>
+<div class="employees">
+<h2>Employees:</h2>
 <p>Mina: Short Resume</p>
 <p>Emre: Short Resume</p>
 <p>Håvard: Short Resume</p>
 <p>Oda: Short Resume</p>
 <p>Bahar: Short Resume</p>
 <p>Fatou: Leader, 999 99 999, fatou@gmail.com</p>
-
+</div>
 </body>
     
        
