--- a/contact-us.html
+++ b/contact-us.html
@@ -2,6 +2,7 @@
 <html lang="" xmlns:background-color="http://www.w3.org/1999/xhtml">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
 
@@ -13,8 +14,6 @@
 
     <header>
         <nav>
-            <p>WellCare Monitors</p>
-            <p>&nbsp;</p>
             <a class="nav" href="index.html">Home</a>
             <a class="nav" href="about.html">About</a>
             <a class="nav" href="products.html">Products</a>
