--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
 
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<header>
+    <nav>
 
-</head>
-
-<body>
-    <header>
-        <h1>WellCare Monitors</h1><nav> 
-    <p>&nbsp;</p>
     <a class="nav" href="index.html">Home</a>
     <a class="nav" href="about.html">About</a>
     <a class="nav" href="products.html">Products</a>
     <a class="nav" href="contact-us.html">Contact us</a>
+
 </nav>
     </header>
 
+</head>
+
+<body>
+    
 <p>&nbsp;</p>
+
 
 <div class="fit">
     <p>&nbsp;&nbsp;</p>
     
     <h1>WellCare Monitors, "Your Health is in Safe Hands"</h1>
 
-    <img src="image/wellcare-monitors.jpg"/>
+    <img src="image/wellcare-monitors.jpg" alt="logo"/>
 
 
 </body>
