--- a/products.html
+++ b/products.html
@@ -7,11 +7,10 @@
 
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <header>
 <nav>
-    <p>WellCare Monitors</p> 
-    <p>&nbsp;</p>
     <a class="nav" href="index.html">Home</a>
     <a class="nav" href="about.html">About</a>
     <a class="nav" href="products.html">Products</a>
@@ -30,11 +29,12 @@
     
     <h1>Products:</h1>
     <h2>Images and description</h2>
-    <ul> <img src="image/armbånd-wellcare.jpg"/></ul>
+    <ul> <img src="image/armbånd-wellcare.jpg" alt="armbånd-med-skjerm"/></ul>
     <li>Inkludert med skjerm</li>
-    <ul></ul><img src="image/armbånd-wellcare2.jpg"/></ul>
+    <ul></ul><img src="image/armbånd-wellcare2.jpg" alt="armbånd-uten-skjerm"/></ul>
+    <div class="mørkere-farge">
     <li>Ikke inkludert skjerm, den røde sirkelen er inne i produktet, og brukes får målingene av helsa til pasienten.</li>
-    
+    </div>
    </p>
 
 </body>
