små endringer i rekkefølge av nettside oppsett, nå skal det være riktig

--- a/contact-us.html
+++ b/contact-us.html
@@ -12,6 +12,11 @@
     <title>Contact us</title>
     <link rel="stylesheet" href="css/main.css">
 
+</head>
+
+
+<body>
+    
     <header>
         <nav>
             <a class="nav" href="index.html">Home</a>
@@ -22,10 +27,7 @@
 
     </header>
 
-</head>
-
-
-<body>
+<main>
 
 <div class = "container">
     <div class = "row">
@@ -100,8 +102,9 @@
 </div>
 
 
-
+</main>
 <script src="javascript/contact-us.js"></script>           
 </body>
+
 </html>
 
