--- a/products.html
+++ b/products.html
@@ -9,21 +9,24 @@
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<header>
-<nav>
-    <a class="nav" href="index.html">Home</a>
-    <a class="nav" href="about.html">About</a>
-    <a class="nav" href="products.html">Products</a>
-    <a class="nav" href="contact-us.html">Contact us</a>
-</nav>
-
-</header>
 
 </head>
 
 <body>
 
-<p>&nbsp;</p>
+    <header>
+        <nav>
+            <a class="nav" href="index.html">Home</a>
+            <a class="nav" href="about.html">About</a>
+            <a class="nav" href="products.html">Products</a>
+            <a class="nav" href="contact-us.html">Contact us</a>
+        </nav>
+        
+        </header>
+
+<main>
+
+    <p>&nbsp;</p>
 
 <div class="fit">
     
@@ -36,6 +39,8 @@
     <li>Ikke inkludert skjerm, den røde sirkelen er inne i produktet, og brukes får målingene av helsa til pasienten.</li>
     </div>
    </p>
+
+</main>
 
 </body>
    
