fikset rar mobiltekst css for index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <p>&nbsp;</p>
 
-    <a id="produkter" href="products.html" alt="products">Se våre produktet</a>
+    <a id="produkter" href="products.html" alt="products">Se våre produkter</a>
 
 </main>
 
